
Fix bug in 2.7 that caused the provision of entropy to the installer
to fail when running under Python 3.

Omit ",cdrom" when passing a CD-ROM device to a Xen PV domain because
doing so will cause NetBSD/Xen to ignore device since xenbus_probe.c
1.51.

- 2.7 released -

Fix bug in 2.6 that caused the provision of entropy to the installer
to fail when running under Python 2.

- 2.6 released -

Support upcoming sysinst changes to support interactive input of
entropy.

Add support for NetBSD/alpha targets.

The "interact" mode now supports interaction with the boot process,
except when the --run option is used.

- 2.5 released -

Reset the test timeout once per test case, not just once per test
program, and reduce the default timeout to 1 hour.

- 2.4 released -

Deal with the root device name of evbarm-aarch64 changing as a result
of the the switch to GPT at source date 2020.05.24.18.44.46.

- 2.3 released -

Deal with curses sometimes optimizing away the final "s" in "Debug
symbols", causing the debug set to not be installed.

Increase default memory size for amd64 from 128M to 192M, as the
installer no longer runs reliably in 128M without exhausting memory.

Keep logging the console output for a few seconds after shutdown to
catch the autoconf detach messages and possible panics on detach.

When logging shell commands, avoid line breaks between options and
their arguments.

Support the "virt" machine type for evbarm-eamv7hf as an alternative
to the default of vexpress-a15.  To enable, use the command line
option --machine virt.

- 2.2 released -

Clean up some b'' quoting that appeared around strings in the log
output under python3.

New command line option --image-format for selecting the guest disk
image format.  Supported values are "dense" (the default) and
"sparse".

Reset the install timeout whenever a new set extraction or other
command is started by sysinst, and reduce the timeout to 1 hour.