@@ -1,3 +1,4 @@
+Preemeptively support sysinst requesting entropy as a single line.
 
 Fix bug in 2.7 that caused the provision of entropy to the installer
 to fail when running under Python 3.
